--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,5 @@
 [build]
-cmd = "composer install --optimize-autoloader --no-dev && php artisan key:generate --force && php artisan config:cache && php artisan route:cache && php artisan view:cache"
+cmd = "composer install --optimize-autoloader --no-dev && php artisan key:generate --force && php artisan config:cache && php artisan route:clear && php artisan route:cache && php artisan view:cache"
 
 [start]
 cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
